# nicoc_libutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/list/: CMakeLists.txt  linked_list.c  linked_list.h  list.c  list.h
test/: CMakeLists.txt  list_tests.cc
